# python_django_educational_project

./: .env.template  Dockerfile  README.md  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
