[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Vladimir Trofimenko <psdmaster.ru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
djangorestframework = "^3.15.0"
django-filter = "^24.1"
pillow = "^10.2.0"
django-debug-toolbar = "^4.3.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
